fixed track title and time alignment on Opera Mini

--- a/src/css/10-xxs.css
+++ b/src/css/10-xxs.css
@@ -26,4 +26,13 @@ screen and (max-width: 20em) and (orientation: landscape) {
 
 /*============== Content ==============*/
 	.content {padding: 0.67em;}
+
+	.content-discography .album-tracks .track-title {
+		display: inline-block;
+		vertical-align: top;
+		width: 75%;
+	}
+	.content-discography .album-tracks .track-length {
+		width: 20%;
+	}
 }
